@@ -1,3 +1,12 @@
+2005-11-03  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* configure.in: Check for fopen64.
+	* libbfd-in.h (real_fopen): New prototype.
+	* configure, config.in, libbfd.h: Regenerated.
+	* bfdio.c (real_fopen): New function.
+	* opncls.c (bfd_fopen, bfd_fill_in_gnu_debuglink_section): Use it.
+	* cache.c (bfd_open_file): Likewise.
+
 2005-11-03  Thiemo Seufer  <ths@networkno.de>
 
 	* elfxx-mips.c (mips_elf_calculate_relocation): Handle only
